Upgraded ethtool to 6.7.  Added crterase to stty command.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22022 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -96,6 +96,10 @@ it can be useful, and other people seem to like it. The <b><tt>python3</tt></b>
 program source has been patched to disable byte code caching. Byte code caching
 doesn't make much sense in an embedded system and it increases the storage
 footprint significantly.</li>
+<br>
+<li>3 February 2024 -- Upgraded ethtool to 6.7. Fixed an annoying backspace
+problem by adding <b><tt>crterase</tt></b> to the <b><tt>stty</tt></b> command
+in <b><tt>/etc/profile</tt></b>.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
