The Python3 extension includes libffi.so and Linux Simple I/O Library bindings for Python3.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22045 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -95,7 +95,9 @@ runtime extension package. Python is not my favorite programming language, but
 it can be useful, and other people seem to like it. The <b><tt>python3</tt></b>
 program source has been patched to disable byte code caching. Byte code caching
 doesn't make much sense in an embedded system and it increases the storage
-footprint significantly.</li>
+footprint significantly. The Python3 extension includes
+<b><tt>libffi.so</tt></b> and Linux Simple I/O Library bindings for
+Python3.</li>
 <br>
 <li>3 February 2024 -- Upgraded ethtool to 6.7. Fixed an annoying backspace
 problem by adding <b><tt>crterase</tt></b> to the <b><tt>stty</tt></b> command
