--- a/README.html
+++ b/README.html
@@ -51,9 +51,10 @@ Zero 2 W is under development.</li>
 which support was merged into GCC 13. During the late 1980's and early 1990's,
 there was a lot of interest in Modula-2 as a system programming language, a
 more robust alternative to C. As a student and beginning software engineer, I
-spent real money on at least three different Modula-2 compilers for DOS.<br>
-Some platform modules and test programs have been moved from <b>libsimpleio</b>
-to <b><tt>muntsos/examples/modula2/</tt>.</b></li>
+spent real money on at least three different Modula-2 compilers for MS-DOS.
+Some platform modules and test programs have been moved from <b><a href=
+"https://github.com/pmunts/libsimpleio">libsimpleio</a></b> to
+<b><tt>muntsos/examples/modula2/</tt>.</b></li>
 <br>
 <li>13 January 2024 -- Upgraded libcurl to 8.5.0. Upgraded libnl to 3.9.0. Took
 advantage of the opportunity to fix the cross-tool package dependency chains.
@@ -102,6 +103,12 @@ Python3.</li>
 <li>3 February 2024 -- Upgraded ethtool to 6.7. Fixed an annoying backspace
 problem by adding <b><tt>crterase</tt></b> to the <b><tt>stty</tt></b> command
 in <b><tt>/etc/profile</tt></b>.</li>
+<br>
+<li>10 February 2024 -- Upgraded the Linux kernel to 6.1.77. The <b><a href=
+"https://github.com/pmunts/libsimpleio">libsimpleio</a></b> bindings for GNU
+Modula-2 are now complete. Added <a href=
+"http://git.munts.com/muntsos/doc/AppNote14-Flash-LED-Modula2.pdf">Application
+Note #14</a>, <i>Modula-2 LED Flash Example</i>.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
