Upgraded the Raspberry Pi 5 Linux kernel to 6.6.23.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22238 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -120,6 +120,13 @@ clock frequencies scale with the CPU frequency, and will only be correct at the
 maximum CPU frequency, which can be guaranteed by the
 <b><tt>performance</tt></b> policy. The Raspberry Pi 5 I<sup>2</sup>C and SPI
 clock frequencies are independent of the CPU frequency.</li>
+<br>
+<li>28 March 2024 -- Reworked Raspberry Pi LED configuration. LEDs are now
+configured in <b><tt>config.txt</tt></b> instead of in
+<b><tt>/etc/rc</tt></b>.</li>
+<br>
+<li>30 March 2024 -- Upgraded the Raspberry Pi 5 Linux kernel to 6.6.23. Other
+boards to follow soon.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
