Updated 64-bit Raspberry Pi kernels to 6.6.23.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22254 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -125,8 +125,8 @@ clock frequencies are independent of the CPU frequency.</li>
 configured in <b><tt>config.txt</tt></b> instead of in
 <b><tt>/etc/rc</tt></b>.</li>
 <br>
-<li>30 March 2024 -- Upgraded the Raspberry Pi 5 Linux kernel to 6.6.23. Other
-boards to follow soon.</li>
+<li>5 April 2024 -- Upgraded 64-bit Raspberry Pi kernels to 6.6.23, the latest
+longterm Linux kernel.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
