Upgraded the Linux kernel to 6.6.25. Upgraded OpenSSH to 9.7p1. Stopped using prebuild OpenSSH server keys.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22260 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -127,6 +127,11 @@ configured in <b><tt>config.txt</tt></b> instead of in
 <br>
 <li>5 April 2024 -- Upgraded 64-bit Raspberry Pi kernels to 6.6.23, the latest
 longterm Linux kernel.</li>
+<br>
+<li>6 April 2024 -- Upgraded 64-bit Raspberry Pi kernels to 6.6.25. Upgraded
+OpenSSH to 9.7p1. Stopped using prebuilt OpenSSH server keys. Generate only
+4096 bit RSA OpenSSH server keys in <b><tt>/etc/rc</tt></b> (if necessary) and
+<b><tt>sysconfig</tt></b>.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
