--- a/README.html
+++ b/README.html
@@ -132,6 +132,11 @@ longterm Linux kernel.</li>
 OpenSSH to 9.7p1. Stopped using prebuilt OpenSSH server keys. Generate only
 4096 bit RSA OpenSSH server keys in <b><tt>/etc/rc</tt></b> (if necessary) and
 <b><tt>sysconfig</tt></b>.</li>
+<br>
+<li>11 April 2024 -- Upgraded some library components: libusb to 1.0.27,
+openssl to 3.3.0, curl to 8.7.1, rabbitmq-c to 0.14.0, libffi to 3.4.6, and
+util-linux to 2.40. Added some library components: libicu and libcap-ng.
+Upgraded emailrelay to 2.5.2. Upgraded openvpn to 2.6.10.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
