--- a/README.html
+++ b/README.html
@@ -135,8 +135,12 @@ OpenSSH to 9.7p1. Stopped using prebuilt OpenSSH server keys. Generate only
 <br>
 <li>11 April 2024 -- Upgraded some library components: libusb to 1.0.27,
 openssl to 3.3.0, curl to 8.7.1, rabbitmq-c to 0.14.0, libffi to 3.4.6, and
-util-linux to 2.40. Added some library components: libicu and libcap-ng.
-Upgraded emailrelay to 2.5.2. Upgraded openvpn to 2.6.10.</li>
+util-linux to 2.40. Added some new library components: libicu and
+libcap-ng.</li>
+<br>
+<li>12 April 2024 -- Upgraded some extension package components: emailrelay to
+2.5.2, openvpn to 2.6.10, .Net Runtime to 8.0.4, python3 to 3.12.3, rsync to
+3.3.0, net-snmp to 5.9.4, and tcpdump to 4.99.4</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
