Renamed debs/ to toolchain-debs/ and rpms/ to toolchain-rpms/
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22316 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -31,7 +31,7 @@ Zero 2 W</a>, the previous naming convention for MuntsOS AArch64 (arm64)
 extension packages with "RaspberryPi3" has proven shortsighted. Therefore the
 extension package naming scheme has updated to be more meaningful for all
 platforms:
-<p><b><tt>dma-muntsos-BeagleBone.deb  </tt></b> becomes
+<p><b><tt>dma-muntsos-BeagleBone.deb</tt></b> becomes
 <b><tt>dma-muntsos-armhf-beaglebone.deb</tt></b><br>
 <b><tt>dma-muntsos-RaspberryPi1.deb</tt></b> becomes
 <b><tt>dma-muntsos-armhf-raspberrypi1.deb</tt></b><br>
@@ -340,12 +340,15 @@ Pascal</a> cross-compilers. Each of these rely on the libraries contained in
 the corresponding GCC cross-toolchain package.</p>
 <p>Cross-toolchain packages built for <a href=
 "https://www.debian.org">Debian</a> Linux (x86-64 <i>and</i> ARM64) development
-host computers are available at:</p>
+host computers are available at either:</p>
 <a href="http://repo.munts.com/debian12">http://repo.munts.com/debian12</a>
+(Debian package repository) or <a href=
+"http://repo.munts.com/muntsos/toolchain-debs">http://repo.munts.com/muntsos/toolchain-debs</a>
+(just the package files).
 <p>x86-64 RPM packages containing the exact same binaries and known to work on
-Fedora 37 and RHEL 9.1 and its derivatives are available at:</p>
+Fedora 40 and RHEL 9.1 and its derivatives are available at:</p>
 <a href=
-"http://repo.munts.com/muntsos/rpms">http://repo.munts.com/muntsos/rpms</a>
+"http://repo.munts.com/muntsos/toolchain-rpms">http://repo.munts.com/muntsos/toolchain-rpms</a>
 <h2>Git Repository</h2>
 <p>The source code for MuntsOS is available at:</p>
 <p><a href=
