Upgraded the Linux kernel to 6.6.30.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22341 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -141,6 +141,11 @@ libcap-ng.</li>
 <li>12 April 2024 -- Upgraded some extension package components: emailrelay to
 2.5.2, openvpn to 2.6.10, .Net Runtime to 8.0.4, python3 to 3.12.3, rsync to
 3.3.0, net-snmp to 5.9.4, and tcpdump to 4.99.4</li>
+<br>
+<li>7 May 2024 -- Upgraded 64-bit Raspberry Pi kernels to 6.6.30. Added
+<b><tt>enscript</tt></b> extension package. Added <a href=
+"http://git.munts.com/muntsos/doc/AppNote17-Printing.pdf">Application Note
+#17</a> about printing from MuntsOS.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
