--- a/README.html
+++ b/README.html
@@ -165,12 +165,11 @@ environment onto a <b>host computer</b> are found in <a href=
 #1</a> and <a href=
 "http://git.munts.com/muntsos/doc/AppNote2-Setup-RPM.pdf">Application Note
 #2</a>. Or just download and run one of the following quick setup scripts:</p>
-<p><a href=
+<a href=
 "http://git.munts.com/muntsos/scripts/setup-debian">setup-debian</a><br>
 <a href=
 "http://git.munts.com/muntsos/scripts/setup-fedora">setup-fedora</a><br>
 <a href="http://git.munts.com/muntsos/scripts/setup-rhel">setup-rhel</a>
-(including lookalikes)</p>
 <p>Instructions for installing MuntsOS to a <b>target computer</b> are found in
 <a href=
 "http://git.munts.com/muntsos/doc/AppNote3-Installation-from-Linux.pdf">Application
