Removed links to Make with Ada projects
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22365 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -364,6 +364,15 @@ host computers are available at either:</p>
 Fedora 40 and RHEL 9.1 and its derivatives are available at:</p>
 <a href=
 "http://repo.munts.com/muntsos/toolchain-rpms">http://repo.munts.com/muntsos/toolchain-rpms</a>
+<h2>Debian Package Repository</h2>
+<p>Prebuilt cross-toolchain packages for <a href=
+"http://www.debian.org">Debian</a> Linux are available at:</p>
+<p><a href=
+"http://repo.munts.com/debian12">http://repo.munts.com/debian12</a></p>
+<h2>File Repository</h2>
+<p>Prebuilt binaries for MuntsOS are available at:</p>
+<p><a href=
+"http://repo.munts.com/muntsos">http://repo.munts.com/muntsos</a></p>
 <h2>Git Repository</h2>
 <p>The source code for MuntsOS is available at:</p>
 <p><a href=
@@ -372,19 +381,6 @@ Fedora 40 and RHEL 9.1 and its derivatives are available at:</p>
 <pre>
 git clone https://github.com/pmunts/muntsos.git
 </pre>
-<h2>File Repository</h2>
-<p>Prebuilt binaries for MuntsOS are available at:</p>
-<p><a href=
-"http://repo.munts.com/muntsos">http://repo.munts.com/muntsos</a></p>
-<h2><a href="https://www.makewithada.org/">Make With Ada</a> Projects</h2>
-<ul>
-<li>2017 <a href=
-"https://www.makewithada.org/entry/ada_linux_sensor_framework">Ada Embedded
-Linux Framework</a></li>
-<li>2019 <a href=
-"https://www.hackster.io/philip-munts/modbus-rtu-framework-for-ada-f33cc6">Modbus
-RTU Framework for Ada</a> (Prize Winner!)</li>
-</ul>
 <hr>
 Questions or comments to Philip Munts <a href=
 "mailto:phil@munts.net">phil@munts.net</a>
