--- a/README.html
+++ b/README.html
@@ -157,6 +157,9 @@ a shell command like:</p>
 suitable for post processing, using a shell command like:</p>
 <p><b><tt>gnuplot test.plt &gt; test.svg</tt></b></p>
 </li>
+<br>
+<li>23 May 2024 -- More component upgrades: ncurses to 6.5, curl to 8.8.0, icu
+to 75.1, nano to 8.0, Raspberry Pi 64-bit kernels to 6.6.31.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
