--- a/README.html
+++ b/README.html
@@ -160,6 +160,11 @@ suitable for post processing, using a shell command like:</p>
 <br>
 <li>23 May 2024 -- More component upgrades: ncurses to 6.5, curl to 8.8.0, icu
 to 75.1, nano to 8.0, Raspberry Pi 64-bit kernels to 6.6.31.</li>
+<br>
+<li>15 June 2024 -- Upgraded Raspberry Pi 64-bit kernels to 6.6.33.  Upgraded
+ethtool to 6.9.  Added <b><tt>detach</tt></b>, a utility program that runs
+a program in the background.
+</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
