Upgraded the .Net Runtime to 8.0.7.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22415 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -165,6 +165,9 @@ to 75.1, nano to 8.0, Raspberry Pi 64-bit kernels to 6.6.31.</li>
 ethtool to 6.9.  Added <b><tt>detach</tt></b>, a utility program that runs
 a program in the background.
 </li>
+<br>
+<li>30 July 2024 -- Upgraded the .Net Runtime to 8.0.7.
+</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
