Lots of component upgrades.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22422 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -161,13 +161,14 @@ suitable for post processing, using a shell command like:</p>
 <li>23 May 2024 -- More component upgrades: ncurses to 6.5, curl to 8.8.0, icu
 to 75.1, nano to 8.0, Raspberry Pi 64-bit kernels to 6.6.31.</li>
 <br>
-<li>15 June 2024 -- Upgraded Raspberry Pi 64-bit kernels to 6.6.33.  Upgraded
-ethtool to 6.9.  Added <b><tt>detach</tt></b>, a utility program that runs
-a program in the background.
-</li>
+<li>15 June 2024 -- Upgraded Raspberry Pi 64-bit kernels to 6.6.33. Upgraded
+ethtool to 6.9. Added <b><tt>detach</tt></b>, a utility program that runs a
+program in the background.</li>
 <br>
-<li>30 July 2024 -- Upgraded the .Net Runtime to 8.0.7.
-</li>
+<li>30 July 2024 -- Upgraded OpenSSL to 3.3.1, curl to 8.9.0, libtirpc to
+1.3.5, libnl to 3.10.0, libsodium to 1.0.20, gdbm to 1.24, and xz to 5.6.2.
+Upgraded .Net Runtime to 8.0.7, OpenSSH to 9.8p1, rpcbind to 1.2.7, and nano to
+8.1.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
