--- a/README.html
+++ b/README.html
@@ -7,168 +7,19 @@ microcontrollers</i>, and integrated into other projects just like traditional
 single chip microcontrollers.</p>
 <h2>News</h2>
 <ul>
-<li>1 January 2024 -- I have decided to suspend active development for 32-bit
-platforms. The 32-bit BeagleBone kernel is frozen at 5.4.106. The 32-bit
-Raspberry Pi 1 and 2 kernels are frozen at 5.15.92. The 32-bit extensions,
-kernels and thin servers will still be rebuilt from time to time to incorporate
-userland improvements. The <b><tt>muntsos-dev</tt></b> package has been updated
-to only pull in 64-bit AArch toolchains.</li>
-<br>
-<li>1 January 2024 -- The 64-bit Raspberry Pi 3 and 4 kernels have been
-upgraded to 6.1.69 and will track <a href=
-"https://github.com/raspberrypi/linux">https://github.com/raspberrypi/linux</a>
-again.</li>
-<br>
-<li>6 January 2024 -- Added a libusb extension package. It just installs
-<b><tt>/usr/local/lib/libusb-1.0.so.0</tt></b>, which is no longer included in
-the kernel RAM file system.</li>
-<br>
-<li>6 January 2024 -- In the course of porting MuntsOS to the 64-bit <a href=
-"https://www.raspberrypi.com/products/raspberry-pi-5">Raspberry Pi 5</a> and
-the <a href=
-"http://www.orangepi.org/orangepiwiki/index.php/Orange_Pi_Zero_2W">Orange Pi
-Zero 2 W</a>, the previous naming convention for MuntsOS AArch64 (arm64)
-extension packages with "RaspberryPi3" has proven shortsighted. Therefore the
-extension package naming scheme has updated to be more meaningful for all
-platforms:
-<p><b><tt>dma-muntsos-BeagleBone.deb</tt></b> becomes
-<b><tt>dma-muntsos-armhf-beaglebone.deb</tt></b><br>
-<b><tt>dma-muntsos-RaspberryPi1.deb</tt></b> becomes
-<b><tt>dma-muntsos-armhf-raspberrypi1.deb</tt></b><br>
-<b><tt>dma-muntsos-RaspberryPi2.deb</tt></b> becomes
-<b><tt>dma-muntsos-armhf-raspberrypi2.deb</tt></b><br>
-<b><tt>dma-muntsos-RaspberryPi3.deb</tt></b> becomes
-<b><tt>dma-muntsos-aarch64.deb</tt></b></p>
-</li>
-<li>7 January 2024 -- Except for porting MuntsOS to the Raspberry Pi 5, which
-is ongoing, I have caught up with my backlog of improvements and fixes. Among
-other things, the MuntsOS startup scripts (<b><tt>/etc/rc</tt></b>) and friends
-have been extensively reworked to prevent race conditions. These changes also
-improve the system boot time. Support for the Raspberry 5 and the Orange Pi
-Zero 2 W is under development.</li>
-<br>
-<li>13 January 2024 -- You can now write programs for MuntsOS in Modula-2, for
-which support was merged into GCC 13. During the late 1980's and early 1990's,
-there was a lot of interest in Modula-2 as a system programming language, a
-more robust alternative to C. As a student and beginning software engineer, I
-spent real money on at least three different Modula-2 compilers for MS-DOS.
-Some platform modules and test programs have been moved from <b><a href=
-"https://github.com/pmunts/libsimpleio">libsimpleio</a></b> to
-<b><tt>muntsos/examples/modula2/</tt>.</b></li>
-<br>
-<li>13 January 2024 -- Upgraded libcurl to 8.5.0. Upgraded libnl to 3.9.0. Took
-advantage of the opportunity to fix the cross-tool package dependency chains.
-Now if you remove the gcc package, all the corresponding free pascal compiler
-and library packages will be removed as well.</li>
-<br>
-<li>20 January 2024 -- Added two new device tree overlays:
-<b><tt>disable-ethernet-pi4</tt></b> and <b><tt>disable-ethernet-pi5</tt></b>.
-These disable the on-board Ethernet interface, exactly like
-<b><tt>disable-wifi</tt></b> disables the on-board WiFi interface. These are
-useful for boards like the <a href=
-"https://www.waveshare.com/wiki/CM4-Duino">CM4-Duino</a>, which doesn't have an
-Ethernet connector.</li>
-<br>
-<li>22 January 2024 -- First cut at the Raspberry Pi 5 kernel is done. Much
-testing and verification needs to be performed.</li>
-<br>
-<li>24 January 2024 -- Reworked the RPM setup scripts <a href=
-"http://git.munts.com/muntsos/scripts/setup-fedora">setup-fedora</a> and
-<a href="http://git.munts.com/muntsos/scripts/setup-rhel">setup-rhel</a> to
-improve the user experience and to interoperate with <a href=
-"https://alire.ada.dev">Alire</a> better. Verified on Fedora 39 and RHEL
-lookalikes.</li>
-<br>
-<li>25 January 2024 -- Validation of the Raspberry Pi 5 port continues, with
-few issues found. I did have to implement a fix for a breaking GPIO API change,
-though, described in <a href=
-"http://git.munts.com/muntsos/doc/AppNote11-link-gpiochip.pdf">Application Note
-#11</a>.</li>
-<br>
-<li>26 January 2024 -- I have now implemented <i>BeagleBone Style</i> GPIO pin
-configuration managment for 64-bit Raspberry Pi boards, using the
-<b><tt>pinctrl</tt></b> command imported from Raspberry Pi OS. See <a href=
-"http://git.munts.com/muntsos/doc/AppNote12-pinctrl.pdf">Application Note
-#12</a> for more information.</li>
-<br>
-<li>30 January 2024 -- Added a <a href="https://www.python.org">Python3</a>
-runtime extension package. Python is not my favorite programming language, but
-it can be useful, and other people seem to like it. The <b><tt>python3</tt></b>
-program source has been patched to disable byte code caching. Byte code caching
-doesn't make much sense in an embedded system and it increases the storage
-footprint significantly. The Python3 extension includes
-<b><tt>libffi.so</tt></b> and Linux Simple I/O Library bindings for
-Python3.</li>
-<br>
-<li>3 February 2024 -- Upgraded ethtool to 6.7. Fixed an annoying backspace
-problem by adding <b><tt>crterase</tt></b> to the <b><tt>stty</tt></b> command
-in <b><tt>/etc/profile</tt></b>.</li>
-<br>
-<li>10 February 2024 -- Upgraded the Linux kernel to 6.1.77. The <b><a href=
-"https://github.com/pmunts/libsimpleio">libsimpleio</a></b> bindings for GNU
-Modula-2 are now complete. Added <a href=
-"http://git.munts.com/muntsos/doc/AppNote14-Flash-LED-Modula2.pdf">Application
-Note #14</a>, <i>Modula-2 LED Flash Example</i>.</li>
-<br>
-<li>28 February 2024 -- Enabled CPU frequency scaling on 64-bit Raspberry Pi
-boards. The default CPU frequency policy is <b><tt>performance</tt></b> for
-Raspberry Pi 3 and 4 and <b><tt>conservative</tt></b> for Raspberry Pi 5. The
-policy can be changed at boot time by writing the desired policy name to
-<b><tt>/etc/scaling_governor</tt></b> and running <b><tt>sysconfig
---save</tt></b>. Note that the Raspberry Pi 3 and 4 I<sup>2</sup>C and SPI
-clock frequencies scale with the CPU frequency, and will only be correct at the
-maximum CPU frequency, which can be guaranteed by the
-<b><tt>performance</tt></b> policy. The Raspberry Pi 5 I<sup>2</sup>C and SPI
-clock frequencies are independent of the CPU frequency.</li>
-<br>
-<li>28 March 2024 -- Reworked Raspberry Pi LED configuration. LEDs are now
-configured in <b><tt>config.txt</tt></b> instead of in
-<b><tt>/etc/rc</tt></b>.</li>
-<br>
-<li>5 April 2024 -- Upgraded 64-bit Raspberry Pi kernels to 6.6.23, the latest
-longterm Linux kernel.</li>
-<br>
-<li>6 April 2024 -- Upgraded 64-bit Raspberry Pi kernels to 6.6.25. Upgraded
-OpenSSH to 9.7p1. Stopped using prebuilt OpenSSH server keys. Generate only
-4096 bit RSA OpenSSH server keys in <b><tt>/etc/rc</tt></b> (if necessary) and
-<b><tt>sysconfig</tt></b>.</li>
-<br>
-<li>11 April 2024 -- Upgraded some library components: libusb to 1.0.27,
-openssl to 3.3.0, curl to 8.7.1, rabbitmq-c to 0.14.0, libffi to 3.4.6, and
-util-linux to 2.40. Added some new library components: libicu and
-libcap-ng.</li>
-<br>
-<li>12 April 2024 -- Upgraded some extension package components: emailrelay to
-2.5.2, openvpn to 2.6.10, .Net Runtime to 8.0.4, python3 to 3.12.3, rsync to
-3.3.0, net-snmp to 5.9.4, and tcpdump to 4.99.4</li>
-<br>
-<li>7 May 2024 -- Upgraded 64-bit Raspberry Pi kernels to 6.6.30. Added
-<b><tt>enscript</tt></b> extension package. Added <a href=
-"http://git.munts.com/muntsos/doc/AppNote17-Printing.pdf">Application Note
-#17</a> about printing from MuntsOS.</li>
-<br>
-<li>8 May 2024 -- Added <b><tt>gnuplot</tt></b> extension package. Only a few
-output formats (parameters to the <b><tt>set terminal</tt></b> plot command)
-are enabled, and even fewer are useful. In particular:
-<p><b><tt>set terminal postscript color</tt></b> is useful for printing, using
-a shell command like:</p>
-<p><b><tt>gnuplot test.plt | lpr</tt></b></p>
-<p><b><tt>set terminal svg</tt></b> is useful for creating an image file
-suitable for post processing, using a shell command like:</p>
-<p><b><tt>gnuplot test.plt &gt; test.svg</tt></b></p>
-</li>
-<br>
-<li>23 May 2024 -- More component upgrades: ncurses to 6.5, curl to 8.8.0, icu
-to 75.1, nano to 8.0, Raspberry Pi 64-bit kernels to 6.6.31.</li>
-<br>
-<li>15 June 2024 -- Upgraded Raspberry Pi 64-bit kernels to 6.6.33. Upgraded
-ethtool to 6.9. Added <b><tt>detach</tt></b>, a utility program that runs a
-program in the background.</li>
+<li>1 January 2024 -- I have suspended development for 32-bit target platforms.
+The 32-bit BeagleBone kernel is frozen at 5.4.106. The 32-bit Raspberry Pi 1
+and 2 kernels are frozen at 5.15.92. The <b><tt>muntsos-dev</tt></b> package
+has been updated to only pull in 64-bit AArch toolchains. The 32-bit target
+platform deliverables (toolchains, kernels, <i>etc.</i>) will be left in the
+repositories until the end of the year.</li>
 <br>
 <li>30 July 2024 -- Upgraded OpenSSL to 3.3.1, curl to 8.9.0, libtirpc to
 1.3.5, libnl to 3.10.0, libsodium to 1.0.20, gdbm to 1.24, and xz to 5.6.2.
 Upgraded .Net Runtime to 8.0.7, OpenSSH to 9.8p1, rpcbind to 1.2.7, and nano to
-8.1. Upgraded the 64-bit Raspberry Pi kernel to 6.6.42</li>
+8.1. Upgraded the 64-bit Raspberry Pi kernel to 6.6.42.</li>
+<br>
+<li>22 November 2024 -- Upgraded the .Net Runtime extension to 9.0.0.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
