--- a/README.html
+++ b/README.html
@@ -20,6 +20,10 @@ Upgraded .Net Runtime to 8.0.7, OpenSSH to 9.8p1, rpcbind to 1.2.7, and nano to
 8.1. Upgraded the 64-bit Raspberry Pi kernel to 6.6.42.</li>
 <br>
 <li>22 November 2024 -- Upgraded the .Net Runtime extension to 9.0.0.</li>
+<li>24 November 2024 -- Upgraded some library components: OpenSSL to 3.4.0, icu
+to 76.1, curl to 8.11.0, libtirpc to 1.3.6, libpcap to 1.10.5, libnl to 3.11.0,
+libmysqlclient (MariaDB Connector/C) to 3.4.3, rabbitmq to 0.15.0, libmodbus to
+3.1.11, and xz to 5.6.3.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
