More software component updates.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22485 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -10,9 +10,9 @@ single chip microcontrollers.</p>
 <li>1 January 2024 -- I have suspended development for 32-bit target platforms.
 The 32-bit BeagleBone kernel is frozen at 5.4.106. The 32-bit Raspberry Pi 1
 and 2 kernels are frozen at 5.15.92. The <b><tt>muntsos-dev</tt></b> package
-has been updated to only pull in 64-bit AArch toolchains. The 32-bit target
-platform deliverables (toolchains, kernels, <i>etc.</i>) will be left in the
-repositories until the end of the year.</li>
+has been updated to only pull in 64-bit AArch64/ARMv8 toolchains. The 32-bit
+target platform deliverables (toolchains, kernels, extensions, thin servers
+<i>etc.</i>) will be left in the repositories until the end of the year.</li>
 <br>
 <li>30 July 2024 -- Upgraded OpenSSL to 3.3.1, curl to 8.9.0, libtirpc to
 1.3.5, libnl to 3.10.0, libsodium to 1.0.20, gdbm to 1.24, and xz to 5.6.2.
@@ -20,10 +20,15 @@ Upgraded .Net Runtime to 8.0.7, OpenSSH to 9.8p1, rpcbind to 1.2.7, and nano to
 8.1. Upgraded the 64-bit Raspberry Pi kernel to 6.6.42.</li>
 <br>
 <li>22 November 2024 -- Upgraded the .Net Runtime extension to 9.0.0.</li>
+<br>
 <li>24 November 2024 -- Upgraded some library components: OpenSSL to 3.4.0, icu
 to 76.1, curl to 8.11.0, libtirpc to 1.3.6, libpcap to 1.10.5, libnl to 3.11.0,
 libmysqlclient (MariaDB Connector/C) to 3.4.3, rabbitmq to 0.15.0, libmodbus to
 3.1.11, and xz to 5.6.3.</li>
+<br>
+<li>25 November 2024 -- Upgraded some initramfs programs: OpenSSH to 9.9p1,
+ethtool to 6.11, and nano to 8.2. Added iw. Upgraded Raspberry Pi 64-bit
+kernels to 6.6.62. Upgraded the Python runtime extension to 3.13.0.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
