Upgraded Linux kernels to 6.6.63.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22490 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -27,8 +27,10 @@ libmysqlclient (MariaDB Connector/C) to 3.4.3, rabbitmq to 0.15.0, libmodbus to
 3.1.11, and xz to 5.6.3.</li>
 <br>
 <li>25 November 2024 -- Upgraded some initramfs programs: OpenSSH to 9.9p1,
-ethtool to 6.11, and nano to 8.2. Added iw. Upgraded Raspberry Pi 64-bit
-kernels to 6.6.62. Upgraded the Python runtime extension to 3.13.0.</li>
+ethtool to 6.11, and nano to 8.2. Added iw. Upgraded the Python runtime
+extension to 3.13.0.</li>
+<br>
+<li>26 November 2024 -- Upgraded Raspberry Pi 64-bit kernels to 6.6.63.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
