Don't need install-pip3 anymore
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22513 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -51,9 +51,7 @@ Note #7</a> for an example.</li>
 <li>14 December 2024 -- Upgraded the Python3 extension to 3.13.1. Moved the
 Python3 extension subdirectory <b><tt>site-packages/</tt></b> from
 <b><tt>/usr/local/lib/python3.13/</tt></b> to
-<b><tt>/usr/local/etc/python3.13/</tt></b>. Added the utility script
-<b><tt>/usr/local/libexec/python3.13/install-pip3</tt></b> to the Python3
-extension.</li>
+<b><tt>/usr/local/etc/python3.13/</tt></b>.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
