Moved 32-bit target deliverables to the attic.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22520 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -52,6 +52,13 @@ Note #7</a> for an example.</li>
 Python3 extension subdirectory <b><tt>site-packages/</tt></b> from
 <b><tt>/usr/local/lib/python3.13/</tt></b> to
 <b><tt>/usr/local/etc/python3.13/</tt></b>.</li>
+<br>
+<li>17 December 2024 -- Moved all 32-bit target deliverables (toolchain
+packages, kernels, extensions, and thin servers) to <a href=
+"http://repo.munts.com/muntsos/attic">http://repo.munts.com/muntsos/attic</a>.
+I did a final build of the 32-bit target kernels with <b><tt>sysconfig</tt></b>
+modified to fetch extensions from the attic. I do not anticipate ever building
+the 32-bit target kernels or thin servers again.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
