Upgraded the Linux kernel to 6.6.67.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22534 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -59,6 +59,10 @@ packages, kernels, extensions, and thin servers) to <a href=
 I did a final build of the 32-bit target kernels with <b><tt>sysconfig</tt></b>
 modified to fetch extensions from the attic. I do not anticipate ever building
 the 32-bit target kernels or thin servers again.</li>
+<br>
+<li>20 December 2024 -- Upgraded the Raspberry Pi kernel to 6.6.67. Added a new
+device tree overlay, <b><tt>Pi4ClickShield</tt></b>, to support the eponymous
+<a href="https://www.mikroe.com/pi-4-click-shield">Mikrobus shield</a>.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
